--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <!-- CONTENT 1 -->
         <div class="container-content">
-            <a href="https://www.xnxx.com/todays-selection" class="a-content">
+            <a href="https://www.apple.com/id/" class="a-content">
                 <img src="images-removebg-preview.png" class="img-content" />
                 <p>KLIK LINK DI SINI</p>
             </a>
